--- a/css/stars.css
+++ b/css/stars.css
@@ -1,4 +1,16 @@
-#page-header {
+body{
+    background-color: black;
+}
+.wall {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0
+}
+#midground {
+     width: 100%;
+    height: 100%;
     background: url(https://s5.mogucdn.com/mlcdn/fe720b/191127_8aa686ieib6k134748ie5928i5f57_500x500.png);
     z-index: 1;
     -webkit-animation: cc 100s linear infinite;
@@ -7,7 +19,9 @@
     animation: cc 100s linear infinite
 }
 
-#page-header {
+#top {
+    width: 100%;
+    height: 100%;
     background: url(https://s5.mogucdn.com/mlcdn/fe720b/191127_8aa686ieib6k134748ie5928i5f57_500x500.png);
     z-index: 4;
     -webkit-animation: dd 100s linear infinite;
